chat box overflow fix

--- a/public/c/layout.app-0.1.css
+++ b/public/c/layout.app-0.1.css
@@ -502,7 +502,7 @@ button.btn:focus {box-shadow: 0 -16px 4px -2px rgba(0, 0, 0, 0.4) inset, 0 -2px 
 	.csstransforms .showcomments #main {-moz-transform: translate(-215px, 0px); -webkit-transform: translate(-215px, 0px); -o-transform: translate(-215px, 0px); -ms-transform: translate(-215px, 0px); transform: translate(-215px, 0px);}
 
 	#listChat .content form input {width:22px; left:215px}
-	#listChat .content form textarea {width:25px; left:215px}
+	#listChat .content form textarea {width:25px; left:215px; overflow:hidden;}
 	.showcomments #listChat .content form input {width:238px; left:0}
 	.showcomments #listChat .content form textarea {width:240px; left:0}
 	#listArticle > article {left:50px; right:50px}
